--- a/_posts/2023-09-03-23nd-sunday.md
+++ b/_posts/2023-09-03-23nd-sunday.md
@@ -2,7 +2,7 @@
 title: September 10th 
 subtitle: 23nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [last-week]
 author: mark
 ---
 
