--- a/_posts/2023-09-10-24nd-sunday.md
+++ b/_posts/2023-09-10-24nd-sunday.md
@@ -2,7 +2,7 @@
 title: September 17th 
 subtitle: 24nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [last-week]
 author: mark
 ---
 
@@ -10,7 +10,7 @@ author: mark
 
 - ENTRANCE: **565 – Before the Sun Burned Bright**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **645 – Eye Has Not Seen**
+- GIFTS: **759 – Blest Are They**
 - COMMUNION: **511 – Taste and See**
 - DISMISSAL: **545 – Companions on the Journey**
 
