fix error in list

--- a/_posts/2023-09-20-25nd-sunday.md
+++ b/_posts/2023-09-20-25nd-sunday.md
@@ -10,7 +10,7 @@ author: mark
 
 - ENTRANCE: **613 – Seek Ye First**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **645 – Eye Has Not Seen**
+- GIFTS: **759 – Blest Are They**
 - COMMUNION: **502 – Seed, Scattered and Sown**
 - DISMISSAL: **729 – O Bless the Lord**
 
