--- a/_posts/2023-09-10-24nd-sunday.md
+++ b/_posts/2023-09-10-24nd-sunday.md
@@ -10,7 +10,7 @@ author: mark
 
 - ENTRANCE: **565 – Before the Sun Burned Bright**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **759 – Blest Are They**
+- GIFTS: **645 – Eye Has Not Seen**
 - COMMUNION: **511 – Taste and See**
 - DISMISSAL: **545 – Companions on the Journey**
 
