--- a/_posts/2023-09-24-26nd-sunday.md
+++ b/_posts/2023-09-24-26nd-sunday.md
@@ -10,7 +10,7 @@ author: mark
 
 - ENTRANCE: **768 – If God Is for Us**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **770 – Come to the Water**
+- GIFTS: **606 – On Eagle’s Wings**
 - COMMUNION: **493 – I Am the Bread of Life**
 - DISMISSAL: **519 – Whatsoever You Do**
 
