--- a/_posts/2023-10-01-27th-sunday.md
+++ b/_posts/2023-10-01-27th-sunday.md
@@ -2,13 +2,13 @@
 title: October 8th 
 subtitle: 27th Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [last-week]
 author: mark
 ---
 
 ## Music Selections
 
-- ENTRANCE: **605 – Blest Be the Lord**
+- ENTRANCE: **733 – O God Beyond All Praising**
 - PSALM: **Respond & Acclaim**
 - GIFTS: **610 – You Are Near**
 - COMMUNION: **498 – One Bread, One Body**
