--- a/_posts/2023-09-01-22nd-sunday.md
+++ b/_posts/2023-09-01-22nd-sunday.md
@@ -2,7 +2,7 @@
 title: September 3rd 
 subtitle: 22nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [last-week]
+tag: [previous-weeks]
 author: mark
 ---
 
