--- a/_posts/2023-09-10-24th-sunday.md
+++ b/_posts/2023-09-10-24th-sunday.md
@@ -2,7 +2,7 @@
 title: September 17th 
 subtitle: 24nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [last-week]
+tag: [previous-weeks]
 author: mark
 ---
 
