--- a/_posts/2023-09-20-25th-sunday.md
+++ b/_posts/2023-09-20-25th-sunday.md
@@ -2,7 +2,7 @@
 title: September 24th 
 subtitle: 25nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [last-week]
+tag: [previous-weeks]
 author: mark
 ---
 
