--- a/_posts/2023-09-24-26th-sunday.md
+++ b/_posts/2023-09-24-26th-sunday.md
@@ -2,7 +2,7 @@
 title: October 1st 
 subtitle: 26th Sunday in Ordinary Time
 categories: [music-selections]
-tag: [last-week]
+tag: [previous-weeks]
 author: mark
 ---
 
