--- a/_posts/2023-10-09-28th-sunday.md
+++ b/_posts/2023-10-09-28th-sunday.md
@@ -2,7 +2,7 @@
 title: October 15th 
 subtitle: 28th Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [previous-weeks]
 author: mark
 ---
 
