--- a/_posts/2023-10-22-30th-sunday.md
+++ b/_posts/2023-10-22-30th-sunday.md
@@ -2,7 +2,7 @@
 title: October 29th 
 subtitle: 30th Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [previous-weeks]
 author: mark
 ---
 
