shuffle some songs around for 31st sunday

--- a/_posts/2023-10-29-31st-sunday.md
+++ b/_posts/2023-10-29-31st-sunday.md
@@ -8,11 +8,11 @@ author: mark
 
 ## Music Selections
 
-- ENTRANCE: **733 – O God Beyond All Praising**
+- ENTRANCE: **709 – Like Cedars**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **709 – Like Cedars**
+- GIFTS: **606 – On Eagle’s Wings**
 - COMMUNION: **498 – One Bread, One Body**
-- DISMISSAL: **768 – If God Is for Us**
+- DISMISSAL: **733 – O God Beyond All Praising**
 
 ## Mass Setting
 
