--- a/_posts/2023-11-05-32nd-sunday.md
+++ b/_posts/2023-11-05-32nd-sunday.md
@@ -1,17 +1,17 @@
 ---
-title: October 8th 
-subtitle: 27th Sunday in Ordinary Time
+title: November 12th 
+subtitle: 32nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [last-month]
+tag: [this-week]
 author: mark
 ---
 
 ## Music Selections
 
-- ENTRANCE: **733 – O God Beyond All Praising**
+- ENTRANCE: **722 – Sing to the Mountains**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **610 – You Are Near**
-- COMMUNION: **498 – One Bread, One Body**
+- GIFTS: **600 – Be Not Afraid**
+- COMMUNION: **765 – Like a Shepherd**
 - DISMISSAL: **544 – They'll Know We Are Christians**
 
 ## Mass Setting
