33rd sunday in ot

--- a/_posts/2023-11-13-33rd-sunday.md
+++ b/_posts/2023-11-13-33rd-sunday.md
@@ -1,8 +1,8 @@
 ---
-title: October 15th 
-subtitle: 28th Sunday in Ordinary Time
+title: November 19th 
+subtitle: 33nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [last-month]
+tag: [this-week]
 author: mark
 ---
 
@@ -10,7 +10,7 @@ author: mark
 
 - ENTRANCE: **538 – City of God**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **596 – Dwelling Place**
+- GIFTS: **610 – You Are Near**
 - COMMUNION: **511 – Taste and See**
 - DISMISSAL: **605 – Blest Be the Lord**
 
