--- a/_posts/2023-11-05-32nd-sunday.md
+++ b/_posts/2023-11-05-32nd-sunday.md
@@ -2,7 +2,7 @@
 title: November 12th 
 subtitle: 32nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [previous-weeks]
 author: mark
 ---
 
