The Solemnity of Christ the King

--- a/_posts/2023-11-13-34th-sunday.md
+++ b/_posts/2023-11-13-34th-sunday.md
@@ -1,18 +1,18 @@
 ---
 title: November 19th 
-subtitle: 33nd Sunday in Ordinary Time
+subtitle: 34nd Sunday in Ordinary Time, The Solemnity of Christ the King
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [this-week]
 author: mark
 ---
 
 ## Music Selections
 
-- ENTRANCE: **538 – City of God**
+- ENTRANCE: **368 – King of Glory**
 - PSALM: **Respond & Acclaim**
-- GIFTS: **610 – You Are Near**
-- COMMUNION: **511 – Taste and See**
-- DISMISSAL: **605 – Blest Be the Lord**
+- GIFTS: **519 – Whatsoever You Do**
+- COMMUNION: **765 – Like a Shepherd**
+- DISMISSAL: **750 – Soon and Very Soon**
 
 ## Mass Setting
 
