second sunday of advent

--- a/_posts/2023-10-18-29th-sunday.md
+++ b/_posts/2023-10-18-29th-sunday.md
@@ -2,7 +2,7 @@
 title: October 22th 
 subtitle: 29th Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
