--- a/_posts/2023-10-29-31st-sunday.md
+++ b/_posts/2023-10-29-31st-sunday.md
@@ -2,7 +2,7 @@
 title: November 5th 
 subtitle: 31st Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
