--- a/_posts/2023-11-13-33rd-sunday.md
+++ b/_posts/2023-11-13-33rd-sunday.md
@@ -2,7 +2,7 @@
 title: November 19th 
 subtitle: 33nd Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
