--- a/_posts/2023-11-25-34th-sunday.md
+++ b/_posts/2023-11-25-34th-sunday.md
@@ -2,7 +2,7 @@
 title: November 26th 
 subtitle: 34nd Sunday in Ordinary Time, The Solemnity of Christ the King
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
