2nd sunday in ot

--- a/_posts/2024-01-07-2nd-sunday.md
+++ b/_posts/2024-01-07-2nd-sunday.md
@@ -11,11 +11,11 @@ author: mark
 - ENTRANCE: **538 – City of God**
 - PSALM: **Spirit & Psalm – Here Am I, Lord**
 - GIFTS: **539 – Here I Am, Lord**
-- COMMUNION: **482 – Bread of Life**
-- DISMISSAL: **729 – O Bless the Lord**
+- COMMUNION: **505 – Eat This Bread**
+- DISMISSAL: **709 – Like Cedars**
 
 ## Mass Setting
 
-- **92, 93, 94, 96, 98, 100, 101 – Mass of Renewal**
+- **92, 93, 94, 96, 97, 100, 101 – Mass of Renewal**
 
 For more information and links, see _**[the Mass Setting page](/mass-setting/)**_.
