--- a/_posts/2024-01-07-news.md
+++ b/_posts/2024-01-07-news.md
@@ -1,5 +1,5 @@
 ---
-title: Mass Setting Changes for Lent
+title: Preparations for Lent
 subtitle: Upcoming Changes to the 11am Mass Setting
 categories: [news]
 tag: [this-week, announcements]
