update commmunion song for today

--- a/_posts/2024-01-14-3rd-sunday.md
+++ b/_posts/2024-01-14-3rd-sunday.md
@@ -11,7 +11,7 @@ author: mark
 - ENTRANCE: **559 – Earthen Vessels**
 - PSALM: **Spirit & Psalm – Teach me your ways, O Lord**
 - GIFTS: **596 – Dwelling Place**
-- COMMUNION: **493 – I Am the Bread of Life**
+- COMMUNION: **498 – One Bread, One Body**
 - DISMISSAL: **544 – They'll Know We Are Christians**
 
 ## Mass Setting
