update songs for next week

--- a/_posts/2024-01-21-4th-sunday.md
+++ b/_posts/2024-01-21-4th-sunday.md
@@ -2,17 +2,17 @@
 title: January 21th 
 subtitle: Third Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [this-week]
 author: mark
 ---
 
 ## Music Selections
 
-- ENTRANCE: **559 – Earthen Vessels**
-- PSALM: **Spirit & Psalm – Teach me your ways, O Lord**
-- GIFTS: **596 – Dwelling Place**
-- COMMUNION: **498 – One Bread, One Body**
-- DISMISSAL: **544 – They'll Know We Are Christians**
+- ENTRANCE: **729 – O Bless the Lord**
+- PSALM: **Spirit & Psalm – If today you hear his voice, harden not your hearts**
+- GIFTS: **610 – You Are Near**
+- COMMUNION: **482 – Bread of Life**
+- DISMISSAL: **619 – Though the Mountains May Fall**
 
 ## Mass Setting
 
