--- a/_posts/2024-01-14-3rd-sunday.md
+++ b/_posts/2024-01-14-3rd-sunday.md
@@ -1,5 +1,5 @@
 ---
-title: January 21th 
+title: January 21st 
 subtitle: Third Sunday in Ordinary Time
 categories: [music-selections]
 tag: [previous-weeks]
