--- a/_posts/2024-01-21-4th-sunday.md
+++ b/_posts/2024-01-21-4th-sunday.md
@@ -1,8 +1,8 @@
 ---
-title: January 21th 
+title: January 28th 
 subtitle: Third Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [previous-weeks]
 author: mark
 ---
 
