update next weeks music and ash wednesday planning

--- a/_posts/2024-01-21-4th-sunday.md
+++ b/_posts/2024-01-21-4th-sunday.md
@@ -1,6 +1,6 @@
 ---
 title: January 28th 
-subtitle: Third Sunday in Ordinary Time
+subtitle: Fourth Sunday in Ordinary Time
 categories: [music-selections]
 tag: [previous-weeks]
 author: mark
