update for the 6th sunday

--- a/_posts/2024-01-28-5th-sunday.md
+++ b/_posts/2024-01-28-5th-sunday.md
@@ -2,7 +2,7 @@
 title: February 4th 
 subtitle: Fifth Sunday in Ordinary Time
 categories: [music-selections]
-tag: [this-week]
+tag: [previous-weeks]
 author: mark
 ---
 
@@ -12,7 +12,7 @@ author: mark
 - PSALM: **Spirit & Psalm – Praise the Lord, who heals the broken-hearted**
 - GIFTS: **759 – Blest Are They**
 - COMMUNION: **493 – I Am the Bread of Life**
-- DISMISSAL: **739 – Sing a New Song**
+- DISMISSAL: **733 – O God Beyond All Praising**
 
 ## Mass Setting
 
