change the naming convention

--- a/_posts/2024-02-04-6th-sunday.md
+++ b/_posts/2024-02-04-6th-sunday.md
@@ -1,6 +1,6 @@
 ---
-title: February 11th 
-subtitle: Sixth Sunday in Ordinary Time
+title: Sixth Sunday in Ordinary Time
+subtitle: February 11th 
 categories: [music-selections]
 tag: [this-week]
 author: mark
