--- a/_posts/2024-02-04-6th-sunday.md
+++ b/_posts/2024-02-04-6th-sunday.md
@@ -2,7 +2,7 @@
 title: Sixth Sunday in Ordinary Time
 subtitle: February 11th 
 categories: [music-selections]
-tag: [this-week]
+tag: [previous-weeks]
 author: mark
 ---
 
