--- a/_posts/2024-01-07-2nd-sunday.md
+++ b/_posts/2024-01-07-2nd-sunday.md
@@ -2,7 +2,7 @@
 title: January 14th 
 subtitle: Second Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
