archive older articles

--- a/_posts/2024-01-14-3rd-sunday.md
+++ b/_posts/2024-01-14-3rd-sunday.md
@@ -2,7 +2,7 @@
 title: January 21st 
 subtitle: Third Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
