--- a/_posts/2024-01-21-4th-sunday.md
+++ b/_posts/2024-01-21-4th-sunday.md
@@ -2,7 +2,7 @@
 title: January 28th 
 subtitle: Fourth Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
