--- a/_posts/2024-01-28-5th-sunday.md
+++ b/_posts/2024-01-28-5th-sunday.md
@@ -2,7 +2,7 @@
 title: February 4th 
 subtitle: Fifth Sunday in Ordinary Time
 categories: [music-selections]
-tag: [previous-weeks]
+tag: [last-month]
 author: mark
 ---
 
