music for the next couple of weeks

--- a/_posts/2024-01-07-news.md
+++ b/_posts/2024-01-07-news.md
@@ -2,7 +2,7 @@
 title: Preparations for Lent
 subtitle: Upcoming Changes to the 11am Mass Setting
 categories: [news]
-tag: [this-week, announcements]
+tag: [announcements]
 author: mark
 ---
 
